Sonar fix replaced collect(Collectors.toList()) with toList()
Signed-off-by: Alexander Gadzhalov <alexander.gadzhalov@limechain.tech>